# reasoning-bank

./: .gitignore  LOCAL_MEMORY_RETRIEVAL_PLAN.md  MEMORY_AWARE_TEST_TIME_SCALING_GAP.md  MEMORY_WRITER_NOTES.md  README.md  SWEBENCH_10PCT_EXPERIMENT_RUNBOOK.md  SWEBENCH_BASELINE_10PCT_200_TURNS.md  SWEBENCH_BASELINE_10PCT_REPRO.md  SWEBENCH_BASELINE_10PCT_RESULT.md  main.py  merge_results.py  mergez_result.py  openai__Qwen__Qwen3.6-35B-A3B-FP8.vllm_10pct_no_memory_merged.json  openai__Qwen__Qwen3.6-35B-A3B-FP8.vllm_qwen_reasoningbank_embed_batch1_chroma.json  openai__Qwen__Qwen3.6-35B-A3B-FP8.vllm_qwen_reasoningbank_embed_batch2_chroma.json  pyproject.toml
SWE-Bench/: results_vllm_10pct_no_memory_merged.json  results_vllm_10pct_no_memory_missing_ids.txt  vllm_qwen_no_memory.yaml  vllm_qwen_one_task.yaml  vllm_qwen_reasoningbank.yaml  vllm_qwen_reasoningbank_validate.yaml
WebArena/: induce_memory.py  memory_management.py  pipeline_memory.py  reeval_memevol_prompt.py  run.py  run.sh  webarena_patch.py
WebArena/agents/legacy/: agent.py
WebArena/agents/legacy/utils/: chat_api.py  llm_utils.py  prompt_templates.py
WebArena/autoeval/: clients.py  evaluate_trajectory.py  evaluator.py  prompts.py
WebArena/prompts/: memory_instruction.py
WebArena/utils/: clients.py  evaluate_trajectory.py  gemini_retry.py
configs/: swebench_chroma.yaml
memory/: openai__Qwen__Qwen3.6-35B-A3B-FP8.jsonl
scripts/: analyze_memory_pollution.py
